Container logic and readme

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 # For local development
-DJANGO_SETTINGS_MODULE=config.settings.local
-
+DJANGO_SETTINGS_MODULE=abacusAPI.config.settings.local
 # # For production
-# DJANGO_SETTINGS_MODULE='config.settings.production'
+# DJANGO_SETTINGS_MODULE=abacusAPI.config.settings.productionw
 
 # Database settings
 DB_NAME=your_db_name
